fix tx footer alignment and bg (#1253)

--- a/app/App/Account/Account/Requests/style/index.styl
+++ b/app/App/Account/Account/Requests/style/index.styl
@@ -422,11 +422,8 @@
     text-transform uppercase
     letter-spacing 2px
     white-space normal
-    display flex
-    justify-content center
-    align-items center
-    margin-top 0px
-    
+    padding-bottom 48px
+
   .cancelRequest
     margin-top 16px
     font-size 10px
@@ -521,7 +518,7 @@
   right 16px
   border-radius 26px
   z-index 99999999
-  background var(--ghostY)
+  background var(--ghostZ)
   padding 2px
 
 .automaticFeeUpdate
@@ -600,7 +597,7 @@
       padding-top 3px
       box-sizing border-box
       background var(--ghostA)
-      box-shadow 0px 1px 2px var(--ghostX)
+      box-shadow 0px 1px 2px var(--ghostZ)
       border-bottom 2px solid var(--ghostZ)
 
     .txActionButton
@@ -616,7 +613,7 @@
       padding-top 3px
       box-sizing border-box
       background var(--ghostA)
-      box-shadow 0px 1px 2px var(--ghostX)
+      box-shadow 0px 1px 2px var(--ghostZ)
       border-bottom 2px solid var(--ghostZ)
     
     .txActionButton:hover
